2004-11-11	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_init): Also reset the
	  Terminal size and update the geometry hints when the scrollbar
	  visibility is changed.
	* terminal/main.c, terminal/stock-icon-closetab16.png,
	  terminal/stock-icon-closetab24.png,
	  terminal/stock-icon-closewindow16.png,
	  terminal/stock-icon-closewindow24.png,
	  terminal/stock-icon-showborders24.png,
	  terminal/stock-icon-showmenu24.png,
	  terminal/stock-icon-reportbug24.png: Added a bunch of new
	  icons, thanks to Francois.
	* terminal/terminal-toolbars-model.c, terminal/terminal-window.c: Set
	  up the newly added stock icons. Added more actions to the toolbars.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* Terminal.spec.in: Keep up with latest changes.
	* Terminal.1: Added manual page.
	* doc/C/: Updated images in the documentation. Added FAQ entry
	  about how to customize the Terminal.ui file.
	* TODO: Added note to look at Gnome HIG to improve the
	  Preferences dialog.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c(terminal_window_init): Also reset the
	  Terminal window size and update the geometry hints when the font
	  is changed.
	* terminal/terminal-options.c: Default to current working directory
	  if no --working-directory option was specified. This fix a problem
	  with ROX XTerm-here as reported by an user on the forums.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-preferences-dialog.c: Reworked the background
	  image file selector a bit.
	* terminal/terminal-window.c: Finally found a way to fix the long
	  standing problem, where the Terminal window resizes upon Gtk+
	  theme changes. This should fix bug #7.

2004-11-10	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-window.c: Added tooltip for the edit-toolbars
	  action.

2004-11-09	Benedikt Meurer <benny@xfce.org>

	* terminal/terminal-widget.c(terminal_widget_force_resize_window): Grab