@@ -678,38 +678,37 @@ static const GdkPixdata stock_showborders24 = {
 
 static const GdkPixdata stock_showmenu24 = {
   0x47646b50, /* Pixbuf magic: 'GdkP' */
-  24 + 615, /* header length + pixel_data length */
+  24 + 606, /* header length + pixel_data length */
   0x2010002, /* pixdata_type */
   96, /* rowstride */
   24, /* width */
   24, /* height */
   /* pixel_data: */
-  "\260\377\377\377\0\1\0\0\0y\225\0\0\0\257\4\0\0\0\254\0\0\0\30\0\0\0"
-  "\322\237\237\237\377\224\240\240\240\377\5===\374\0\0\0Z@@>\362\257\255"
-  "\252\377\272\270\265\377\207\330\325\321\377\1\310\306\302\377\213\257"
-  "\255\252\377\5\221\217\214\377\7\7\7\236MMK\361\352\350\343\377\351\350"
-  "\342\377\207\352\350\343\377\1\352\350\342\377\213\352\350\343\377\5"
-  "\305\303\277\377\10\10\10\236MMK\361\352\350\343\377\351\350\342\377"
-  "\207\352\350\343\377\1\352\350\342\377\213\352\350\343\377\5\305\303"
-  "\277\377\10\10\10\236@@>\362\257\255\252\377\277\276\272\377\207\352"
-  "\350\343\377\1\324\322\315\377\213\257\255\252\377\5\221\217\214\377"
-  "\7\7\7\236\0\0\0\322\273\273\273\377ssq\377\207\352\350\343\377\1\226"
-  "\225\221\377\213\261\261\261\377\5XXX\375\0\0\0~\0\0\0\314\206\206\206"
-  "\377PPN\377\207\352\350\343\377\1\223\222\216\377\213666\377\5fff\375"
-  "\0\0\0y\0\0\0\314\206\206\206\377PPN\377\207\352\350\343\377\1\223\222"
-  "\216\377\213666\377\5fff\375\0\0\0y\0\0\0\314\206\206\206\377PPN\377"
-  "\207\352\350\343\377\1\223\222\216\377\213666\377\5fff\375\0\0\0y\0\0"
-  "\0\314\206\206\206\377PPN\377\207\352\350\343\377\1\223\222\216\377\213"
-  "666\377\5fff\375\0\0\0y\0\0\0\314\206\206\206\377PPN\377\207\352\350"
-  "\343\377\1\223\222\216\377\213666\377\5fff\375\0\0\0y\0\0\0\314\206\206"
-  "\206\377PPN\377\207\352\350\343\377\1\223\222\216\377\213666\377\5ff"
-  "f\375\0\0\0y\0\0\0\314\206\206\206\377211\377\207ddb\377\1DCB\377\213"
-  "666\377\4fff\375\0\0\0y\0\0\0\314\206\206\206\377\224666\377\4fff\375"
-  "\0\0\0y\0\0\0\314\206\206\206\377\224666\377\4fff\375\0\0\0y\0\0\0\314"
-  "\206\206\206\377\224666\377\4fff\375\0\0\0y\0\0\0\314\241\241\241\377"
-  "\224hhh\377\4fff\375\0\0\0y\0\0\0\307%%%\353\224***\357\4\16\16\16\362"
-  "\0\0\0r\0\0\0\3\0\0\0""0\224\0\0\0F\2\0\0\0E\0\0\0""1\260\377\377\377"
-  "\0",
+  "\260\377\377\377\0\1\0\0\0\202\225\0\0\0\275\4\0\0\0\272\0\0\0&\27\27"
+  "\26\352xwu\377\224}|y\377\5""220\377\0\0\0g\34\33\33\352\342\340\333"
+  "\377\352\350\343\377\210\352\347\343\377\213\352\350\343\377\5dca\376"
+  "\0\0\0g\34\33\33\352\342\340\333\377\351\350\342\377\207\352\350\343"
+  "\377\1\352\350\342\377\213\352\350\343\377\5hge\376\0\0\0g\34\33\33\352"
+  "\342\340\333\377\351\350\342\377\207\352\350\343\377\1\352\350\342\377"
+  "\213\352\350\343\377\5hge\376\0\0\0g\30\30\30\352\234\233\230\377\265"
+  "\264\260\377\207\352\350\343\377\1\316\315\310\377\213\241\240\235\377"
+  "\5MLL\377\0\0\0g\0\0\0\326\302\302\302\377uus\377\207\352\350\343\377"
+  "\1\226\225\221\377\213\270\270\270\377\5]]]\375\0\0\0g\0\0\0\324\206"
+  "\206\206\377PPN\377\207\352\350\343\377\1\223\222\216\377\213666\377"
+  "\5fff\375\0\0\0g\0\0\0\324\206\206\206\377PPN\377\207\352\350\343\377"
+  "\1\223\222\216\377\213666\377\5fff\375\0\0\0g\0\0\0\324\206\206\206\377"
+  "PPN\377\207\352\350\343\377\1\223\222\216\377\213666\377\5fff\375\0\0"
+  "\0g\0\0\0\324\206\206\206\377PPN\377\207\352\350\343\377\1\223\222\216"
+  "\377\213666\377\5fff\375\0\0\0g\0\0\0\324\206\206\206\377PPN\377\207"
+  "\352\350\343\377\1\223\222\216\377\213666\377\5fff\375\0\0\0g\0\0\0\324"
+  "\206\206\206\377PPN\377\207\352\350\343\377\1\223\222\216\377\213666"
+  "\377\5fff\375\0\0\0g\0\0\0\324\206\206\206\377211\377\207ddb\377\1DC"
+  "B\377\213666\377\4fff\375\0\0\0g\0\0\0\324\206\206\206\377\224666\377"
+  "\4fff\375\0\0\0g\0\0\0\324\206\206\206\377\224666\377\4fff\375\0\0\0"
+  "g\0\0\0\324\206\206\206\377\224666\377\4fff\375\0\0\0g\0\0\0\324\241"
+  "\241\241\377\224hhh\377\4fff\375\0\0\0g\0\0\0\320%%%\357\224***\357\3"
+  "\16\16\16\362\0\0\0_\0\0\0\21\225\0\0\0,\2\0\0\0+\0\0\0\23\260\377\377"
+  "\377\0",
 };
 
 
