@@ -1,5 +1,10 @@
 2004-11-11	Benedikt Meurer <benny@xfce.org>
 
+	* terminal/stock-icon-showmenu24.png, terminal/stock-icons.h: Better
+	  showmenu icon.
+
+2004-11-11	Benedikt Meurer <benny@xfce.org>
+
 	* terminal/terminal-window.c(terminal_window_init): Also reset the
 	  Terminal size and update the geometry hints when the scrollbar
 	  visibility is changed.
